# B4

./: .gitattributes  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.platform  Dockerfile.prod  README.md  docker-compose.yml  entrypoint.sh  ex1.mwb  main.tf  nginx.conf  shell.nix  variables.tf
backend/: .gitignore  Cargo.toml  build.rs  diesel.toml
backend/assets/: default_crop_types.json  default_crops_types.json  default_sentences.json  default_tips.json  sentences.json
backend/cert/: cert.pem  key.pem
backend/macros/: Cargo.toml
backend/macros/src/: lib.rs
backend/migrations/2024-02-24-071829_create_admins/: down.sql  up.sql
backend/migrations/2024-02-24-221348_create_users/: up.sql
backend/migrations/2024-02-29-155021_create_statistics/: down.sql  up.sql
backend/migrations/2024-03-02-060020_create_crop/: down.sql  up.sql
backend/migrations/2024-03-04-031704_update_user/: down.sql  up.sql
backend/migrations/2024-03-08-184235_crop_type/: down.sql  up.sql
backend/migrations/2024-03-08-203851_recognition_data/: down.sql  up.sql
backend/migrations/2024-03-10-042431_base/: down.sql  up.sql
backend/migrations/2024-03-10-185101_base/: down.sql  up.sql
backend/migrations/2024-03-13-210815_base/: down.sql  up.sql
backend/src/: app.rs  bank.rs  config.rs  database.rs  docs.rs  main.rs  middlewares.rs  models.rs  routes.rs  schema.rs  socket.rs  tests.rs  utils.rs
backend/tests_api/: admin_signin.hurl  create_crop_type.hurl  get_user_statistics.hurl  get_users.hurl  register_admin.hurl  register_user.hurl  user_info.hurl  user_signin.hurl
(+226 files in other folders)
