[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-files = "0.6.5"
actix-web = { version = "4.5.1", features = ["openssl"] }
actix-web-actors = "4.3.0"
anyhow = "1.0.80"
argon2 = "0.5.3"
chrono = { version = "0.4.34", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
uuid = { version = "1.7.0", features = ["v4"] }
diesel = { version = "2.1.4", features = ["mysql", "r2d2", "chrono", "uuid"] }
actix-web-lab = "0.20.2"
env_logger = "0.11.2"
log = "0.4.20"
rand = "0.8.5"
rand_derive = "0.5"
regex = "1.10.3"
tokio = "1.36.0"
woothee = "0.13.0"
validator = { version = "0.17", features = ["derive"] }
actix-cors = "0.7.0"
ip2location = "0.5.0"
ipinfo = "3.0.0"
diesel-derive-enum = { version = "2.1.0", features = ["mysql"] }
utoipa = { version="4.2.0", features = ["actix_extras"]}
openssl = "0.10.64"

[dev-dependencies]
actix-rt = "2.4.0"
fake = { version = "2.9.2", features = ["derive"] }
futures = "0.3.30"
